# advent-of-code-2022-rust

./: Cargo.toml  README.md
src/day01/: main.rs
src/day02/: main.rs
src/day03/: main.rs
src/day04/: main.rs
src/day05/: board.rs  command.rs  main.rs
src/day06/: main.rs
