[package]
name = "advent-of-code-2022-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"